Fix for homepage on IE; Fixes for homepage header on IE

--- a/src/scss/_components/_component.header.scss
+++ b/src/scss/_components/_component.header.scss
@@ -49,6 +49,9 @@
                 display: block;
                 top: 0; bottom: 0;
                 left: 0; right: 0;
+                width: 100%;
+                height: 100%;
+                margin: auto;
             }
             &__splash-art {
                 z-index: 25;
@@ -72,7 +75,6 @@
                 background-repeat: no-repeat;
 
                 max-width: 1200px;
-                margin: 0 auto;
 
                 @include breakpoint($break-md) {
                     display: block;
