--- a/src/scss/_components/_component.navigation.scss
+++ b/src/scss/_components/_component.navigation.scss
@@ -33,7 +33,7 @@
             display: block;
             position: relative;
             float: left;
-            width: 235px;
+            width: 240px;
             height: 111px;
 
             .site-logo {
