--- a/src/scss/_pages/_page.homepage.scss
+++ b/src/scss/_pages/_page.homepage.scss
@@ -1,50 +1,87 @@
 .product-list__homepage  {
     padding-bottom: 50px;
     display: grid;
-    grid-gap: 15px;
+    // grid-gap: 15px;
     grid-template-columns: 1fr; 
     grid-auto-rows: 550px;
 
+    display: flex;
+    flex-flow: row wrap;    
+    width: 100%;
+
+    .product__instance {
+        width: 100%;
+    }
+
     @include breakpoint($break-xxs){
-        grid-template-columns: 1fr 1fr;
+        
+        .product__instance {
+            width: calc(50% - 8px);
+            flex-basis: calc(50% - 8px);
+            margin-bottom: 15px;
+
+            &:nth-of-type(2n+1) {
+                margin-right: 15px;
+            }
+        }
+
     }
     @include breakpoint($break-md) {
-        grid-gap: 20px;
-        grid-template-columns: 1fr 1fr 1fr;
+        .product__instance {
+            width: calc(33.33332% - 14px);
+            flex-basis: calc(33.33332% - 14px);
+            margin-bottom: 20px;
+
+            &:nth-of-type(2n+1) {
+                margin-left: 0;
+                margin-right: 0;
+            }
+            &:nth-of-type(3n+2) {
+                margin-left: 20px;
+                margin-right: 20px;
+            }
+        }
     }
     @include breakpoint($break-lg) {
+
+        display: grid;
+
         border-bottom: 1px solid #eeeeee;
         width: 100%;
         max-width: 1350px;
-        grid-template-columns: 1fr 1fr 1fr 1fr;
-        grid-template-rows: 225px 225px 225px 225px 225px;
-        grid-gap: 30px;
+        grid-template-columns: 1fr 20px 1fr 20px 1fr 20px 1fr;
+        grid-template-rows: 250px 20px 250px 20px 250px 20px 250px 20px 250px;
         margin-bottom: 48px;
 
         .product__instance {
+
+            width: auto;
+            height: auto;
+            margin: 0 !important;
+            
             &:nth-child(1) {
-                grid-column: 1 / 3;
-                grid-row: 1 / 4;
+                grid-column: 1 / 4;
+                grid-row: 1 / 6;
             }
             &:nth-child(2) {
-                grid-column: 3 / 4;
-                grid-row: 1 / 3;
+                grid-column: 5 / 6;
+                grid-row: 1 / 4;
             }
             &:nth-child(3) {
-                grid-column: 4 / 5;
-                grid-row: 1 / 3;
+                grid-column: 7 / 8;
+                grid-row: 1 / 4;
             }
             &:nth-child(4) {
-                grid-row: 4 / 6;
+                grid-row: 7 / 10;
                 grid-column: 1 / 2;
             }
             &:nth-child(5) {
-                grid-row: 4 / 6;
-                grid-column: 2 / 3;
+                grid-row: 7 / 10;
+                grid-column: 3 / 4;
             }
             &:nth-child(6) {
-                grid-row: 3 / 6;
-                grid-column: 3 / 5;
+                grid-row: 5 / 10;
+                grid-column: 5 / 8;
             }
         }
 
@@ -54,10 +91,6 @@
         width: 100%;
         max-width: 1800px;
     }
-
-    .product__instance {
-        height: auto !important;
-    }
 }
 .product-list__sorting.sorting--homepage {
     display: none;
@@ -65,7 +98,6 @@
         display: block;
     }
 }
-
 .frontpage__lookbook {
     
     @include breakpoint($break-md) {
