--- a/src/scss/_pages/_page.product-list.scss
+++ b/src/scss/_pages/_page.product-list.scss
@@ -11,7 +11,6 @@
     }
 
     @include breakpoint($break-xxs) {
-
         .product__instance {
             width: calc(50% - 8px);
             flex-basis: calc(50% - 8px);
@@ -21,11 +20,8 @@
                 margin-right: 15px;
             }
         }
-
     }
     @include breakpoint($break-md) {
-        grid-gap: 20px;
-        
         .product__instance {
             width: calc(33.33332% - 14px);
             flex-basis: calc(33.33332% - 14px);
@@ -40,7 +36,6 @@
                 margin-right: 20px;
             }
         }
-
     }
     @include breakpoint($break-lg) {
         max-width: 1350px;
@@ -68,33 +63,6 @@
     @include breakpoint($break-hd) {
         max-width: 1800px;
     }
-
-    /*
-    padding-bottom: 50px;
-    display: grid;
-    grid-gap: 15px;
-    grid-template-columns: 1fr; 
-    grid-auto-rows: 550px;
-
-    @include breakpoint($break-xxs){
-        grid-template-columns: 1fr 1fr;
-    }
-    @include breakpoint($break-md) {
-        grid-gap: 20px;
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-auto-rows: 550px;
-    }
-    @include breakpoint($break-lg) {
-        width: 100%;
-        max-width: 1350px;
-        grid-gap: 30px;
-        grid-template-columns: 1fr 1fr 1fr 1fr;
-    }
-    @include breakpoint($break-hd) {
-        width: 100%;
-        max-width: 1800px;
-    }
-    */
 }
 .product-list__sorting {
 
